--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -243,6 +243,9 @@
           <a href="{{ entry.poster | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
         {% endif %}
       {% endif %}
+      {% if entry.news %}
+        <a href="{{ entry.news }}" class="btn btn-sm z-depth-0" role="button" target="_blank">NEWS</a>
+      {% endif %}
       {% if entry.slides %}
         {% if entry.slides contains '://' %}
           <a href="{{ entry.slides }}" class="btn btn-sm z-depth-0" role="button">Slides</a>
